--- a/client/src/components/user-interface/task/task.less
+++ b/client/src/components/user-interface/task/task.less
@@ -1,11 +1,15 @@
 @blue: rgb(85, 103, 207);
 @dark-blue: rgb(42, 98, 202);
-@font-color: rgba(255, 255, 255, 0.65);
+@font-color: rgba(255, 255, 255, 0.5);
 
 .list-wrapper {
   flex: 0 1 500px;
   flex-direction: column;
-  padding: 20px;
   min-width: 300px;
   height: 100vh;
+  
+  .head {
+    padding: 20px;
+  
+  }
 }
