--- a/client/src/components/user-interface/task/dumb-components/todo-list.less
+++ b/client/src/components/user-interface/task/dumb-components/todo-list.less
@@ -3,7 +3,6 @@
 
 .wrapper {
   display: flex;
-  justify-content: space-between;
   padding: 0 20px;
   width: 100%;
 
@@ -20,6 +19,10 @@
       margin: 0 20px 6px 0;
       max-width: 400px;
       min-width: 190px;
+
+      .todo-tag {
+        margin-left: 10px;
+      }
     }
 
     .create-time {
