--- a/client/src/components/sign-up/sign.less
+++ b/client/src/components/sign-up/sign.less
@@ -1,15 +1,21 @@
 .sign-form {
-  margin: 100px auto 0;
-  padding: 40px 60px 20px;
-  max-width: 400px;
+  margin: 100px auto;
+  width: 400px;
   border: 1px solid #e9e9e9;
+  
+  .form-wrapper {
+    // padding: 30px 60px 20px;
+    margin: 30px 40px;
+    width: 300px;
 
-  .signin-form-forgot {
-    float: right;
+    .signin-form-forgot {
+      float: right;
+    }
+  
+    .sign-form-button {
+      display: block;
+      width: 100%;
+    }
   }
-
-  .sign-form-button {
-    display: block;
-    width: 100%;
-  }
+  
 }
