--- a/client/src/components/user-interface/task/containers/todo-list.less
+++ b/client/src/components/user-interface/task/containers/todo-list.less
@@ -1,7 +1,7 @@
 @light-blue: #1890ff;
-@bg: #e8e8e8;
+@bg: rgba(0, 0, 0, 0.05);
 
-.list-item:hover {
+.isActived{
   color: @light-blue;
   background-color: @bg;
 }
